// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
  background-color: var(--background-color);
  color: var(--color);
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  gap: 33px;
}

.emotion-2:not(:last-child):after {
  content: '';
  border-left: 2px dashed var(--border-left);
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
  z-index: 0;
}

.emotion-2 h2,
.emotion-2 h3,
.emotion-2 h4 {
  margin-top: 4px;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  background-color: var(--background-color);
  color: var(--color);
  height: 34px;
  width: 34px;
  z-index: 1;
}

.emotion-8 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-8 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-8 {
    padding-bottom: 32px;
  }
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
}

.emotion-9 strong,
.emotion-9 b {
  font-weight: 700;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--color);
  font-weight: var(--font-weight);
}

.emotion-11>code {
  color: var(--color);
}

.emotion-11:focus,
.emotion-11:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-11:focus {
  text-decoration-color: var(--focus-text-decoration-color);
  outline: none;
}

.emotion-11:hover {
  text-decoration-color: var(--hover-text-decoration-color);
}

<div
    class="emotion-0 emotion-1"
    style="--background-color: initial; --color: initial;"
  >
    <div
      class="emotion-2 emotion-3"
      style="--border-left: #E8EDEB;"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          style="--background-color: #E3FCF7; --color: #00684A;"
        >
          1
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <p
          class="emotion-9"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="emotion-9"
        >
          <a
            class="emotion-11"
            href="/connect/#std-label-connect-run-compass"
            style="--color: #016BF8; --focus-text-decoration-color: #016BF8; --hover-text-decoration-color: #E8EDEB; --font-weight: inherit;"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
      style="--border-left: #E8EDEB;"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          style="--background-color: #E3FCF7; --color: #00684A;"
        >
          2
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <p
          class="emotion-9"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="emotion-9"
        >
          <a
            class="emotion-11"
            href="/import-export/#std-label-compass-import-export"
            style="--color: #016BF8; --focus-text-decoration-color: #016BF8; --hover-text-decoration-color: #E8EDEB; --font-weight: inherit;"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders steps nested in include nodes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
  background-color: var(--background-color);
  color: var(--color);
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  gap: 33px;
}

.emotion-2:not(:last-child):after {
  content: '';
  border-left: 2px dashed var(--border-left);
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
  z-index: 0;
}

.emotion-2 h2,
.emotion-2 h3,
.emotion-2 h4 {
  margin-top: 4px;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  background-color: var(--background-color);
  color: var(--color);
  height: 34px;
  width: 34px;
  z-index: 1;
}

.emotion-8 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-8 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-8 {
    padding-bottom: 32px;
  }
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 32px;
  line-height: 40px;
  font-weight: 400;
  font-family: 'MongoDB Value Serif','Times New Roman',serif;
  color: #00684A;
  margin-top: 24px;
  margin-bottom: 8px;
  margin-top: 16px;
  margin-bottom: 24px;
}

.emotion-10 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 10px;
  visibility: hidden;
}

.emotion-11 {
  border-radius: 0!important;
  display: initial!important;
  margin: initial!important;
}

.emotion-13 {
  margin-top: -175px;
  position: absolute;
  padding-bottom: 2px;
}

.emotion-15 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
}

.emotion-15 strong,
.emotion-15 b {
  font-weight: 700;
}

<div
    class="emotion-0 emotion-1"
    style="--background-color: initial; --color: initial;"
  >
    <div
      class="emotion-2 emotion-3"
      style="--border-left: #E8EDEB;"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          style="--background-color: #E3FCF7; --color: #00684A;"
        >
          1
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="contains-headerlink emotion-9"
            weight="medium"
          >
            Step 1
            <a
              class="headerlink emotion-10"
              href="#step-1"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                height="10"
                src="/assets/link.svg"
                width="10"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-1"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 1
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
      style="--border-left: #E8EDEB;"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          style="--background-color: #E3FCF7; --color: #00684A;"
        >
          2
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="contains-headerlink emotion-9"
            weight="medium"
          >
            Step 2
            <a
              class="headerlink emotion-10"
              href="#step-2"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                height="10"
                src="/assets/link.svg"
                width="10"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-2"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 2
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
      style="--border-left: #E8EDEB;"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          style="--background-color: #E3FCF7; --color: #00684A;"
        >
          3
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="contains-headerlink emotion-9"
            weight="medium"
          >
            Step 3
            <a
              class="headerlink emotion-10"
              href="#step-3"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                height="10"
                src="/assets/link.svg"
                width="10"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-3"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 3
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
      style="--border-left: #E8EDEB;"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          style="--background-color: #E3FCF7; --color: #00684A;"
        >
          4
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="contains-headerlink emotion-9"
            weight="medium"
          >
            Step 4
            <a
              class="headerlink emotion-10"
              href="#step-4"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                height="10"
                src="/assets/link.svg"
                width="10"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-4"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 4
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
      style="--border-left: #E8EDEB;"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          style="--background-color: #E3FCF7; --color: #00684A;"
        >
          5
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="contains-headerlink emotion-9"
            weight="medium"
          >
            Step 5
            <a
              class="headerlink emotion-10"
              href="#step-5"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                height="10"
                src="/assets/link.svg"
                width="10"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-5"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 5
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
      style="--border-left: #E8EDEB;"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          style="--background-color: #E3FCF7; --color: #00684A;"
        >
          6
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="contains-headerlink emotion-9"
            weight="medium"
          >
            Step 6
            <a
              class="headerlink emotion-10"
              href="#step-6"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                height="10"
                src="/assets/link.svg"
                width="10"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-6"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 6
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
      style="--border-left: #E8EDEB;"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          style="--background-color: #E3FCF7; --color: #00684A;"
        >
          7
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <section>
          <h1
            class="contains-headerlink emotion-9"
            weight="medium"
          >
            Step 7
            <a
              class="headerlink emotion-10"
              href="#step-7"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                height="10"
                src="/assets/link.svg"
                width="10"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-7"
            />
          </h1>
          <p
            class="emotion-15"
          >
            Content for step 7
          </p>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
  background-color: var(--background-color);
  color: var(--color);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
}

.emotion-2 h2,
.emotion-2 h3,
.emotion-2 h4 {
  margin-top: unset;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: var(--background-color);
  color: var(--color);
  height: 24px;
  width: 24px;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
}

.emotion-9 strong,
.emotion-9 b {
  font-weight: 700;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--color);
  font-weight: var(--font-weight);
}

.emotion-11>code {
  color: var(--color);
}

.emotion-11:focus,
.emotion-11:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-11:focus {
  text-decoration-color: var(--focus-text-decoration-color);
  outline: none;
}

.emotion-11:hover {
  text-decoration-color: var(--hover-text-decoration-color);
}

<div
    class="emotion-0 emotion-1"
    style="--background-color: initial; --color: initial;"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          style="--background-color: #001E2B; --color: #FFFFFF;"
        >
          1
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <p
          class="emotion-9"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="emotion-9"
        >
          <a
            class="emotion-11"
            href="/connect/#std-label-connect-run-compass"
            style="--color: #016BF8; --focus-text-decoration-color: #016BF8; --hover-text-decoration-color: #E8EDEB; --font-weight: inherit;"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
          style="--background-color: #001E2B; --color: #FFFFFF;"
        >
          2
        </div>
      </div>
      <div
        class="emotion-8"
      >
        <p
          class="emotion-9"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="emotion-9"
        >
          <a
            class="emotion-11"
            href="/import-export/#std-label-compass-import-export"
            style="--color: #016BF8; --focus-text-decoration-color: #016BF8; --hover-text-decoration-color: #E8EDEB; --font-weight: inherit;"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
